Solve issues with global replace of button-link and button class, added styles to disabled sfa-secondary-button

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Home/HowToApply.cshtml
@@ -507,7 +507,7 @@
         </div>
     </div>
     <p id="saveApplication">
-        <a href="#" class=".sfa-button-secondary saveADraft">Save</a>
+        <a href="#" class="button sfa-button-secondary saveADraft">Save</a>
     </p>
     <!--   <p id="applicationSaved">
         Saved at 10:20 to <a href="dashboard.html">my applications</a>
