--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Review.cshtml
@@ -18,8 +18,8 @@
         <section>
             <div class="form-group">
                 <button id="btnApprove" type="submit" class="button" name="VacancyQAAction" value="Approve">Approve and continue to next vacancy</button>
-                <button id="btnReject" type="submit" class=".sfa-button-secondary" name="VacancyQAAction" value="Reject">Refer and continue to next vacancy</button>
-                <button id="btnUnReserve" type="submit" class=".sfa-button-secondary" name="VacancyQAAction" value="UnReserveForQA">Agency home</button>
+                <button id="btnReject" type="submit" class="button sfa-button-secondary" name="VacancyQAAction" value="Reject">Refer and continue to next vacancy</button>
+                <button id="btnUnReserve" type="submit" class="button sfa-button-secondary" name="VacancyQAAction" value="UnReserveForQA">Agency home</button>
             </div>
         </section>
     }
