--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ConfirmBulkUnsuccessfulDecision.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ConfirmBulkUnsuccessfulDecision.cshtml
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <br/>
-            <button type="submit" class=".sfa-button-secondary" name="EditBulkDeclineCandidatesAction" value="EditBulkDeclineCandidates">
+            <button type="submit" class="button sfa-button-secondary" name="EditBulkDeclineCandidatesAction" value="EditBulkDeclineCandidates">
                 Edit list
             </button>
         </div>
