--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -88,7 +88,7 @@
                 {
                     <div class="form-group">
                         <p class="sfa-medium-bottom-margin">
-                            <button type="submit" class=".sfa-button-secondary" name="Review" value="ReviewRevertToInProgress">
+                            <button type="submit" class="button sfa-button-secondary" name="Review" value="ReviewRevertToInProgress">
                                 Revert this candidate's application back to In progress
                             </button>
                         </p>
