--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySummary.cshtml
@@ -29,7 +29,7 @@
         else
         {
             <button id="vacancySummaryButton" type="submit" class="button no-autosave" name="VacancySummary" value="@saveButtonValue">@saveButtonText</button>
-            <button id="vacancySummaryAndExit" type="submit" class=".sfa-button-secondary no-autosave" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
+            <button id="vacancySummaryAndExit" type="submit" class="button sfa-button-secondary no-autosave" name="VacancySummary" value="VacancySummaryAndExit">Save and exit</button>
         }
         @if (Model.ComeFromPreview)
         {
