--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Apply.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Apply.cshtml
@@ -96,7 +96,7 @@
             </div>
         </div>
         <p id="saveApplication">
-            <button id="save-button" type="submit" name="ApplicationAction" class=".sfa-button-secondary no-check-for-dirty-form cancel" value="Save" onclick='Webtrends.multiTrack({ element: this, argsa: ["DCS.dcsuri", "/apprenticeship/apply/savedraft/@Model.VacancyId", "WT.dl", "99", "WT.ti", "Apprenticeship – Save Draft Form"] });'>Save</button>
+            <button id="save-button" type="submit" name="ApplicationAction" class="button sfa-button-secondary no-check-for-dirty-form cancel" value="Save" onclick='Webtrends.multiTrack({ element: this, argsa: ["DCS.dcsuri", "/apprenticeship/apply/savedraft/@Model.VacancyId", "WT.dl", "99", "WT.ti", "Apprenticeship – Save Draft Form"] });'>Save</button>
         </p>
         @if (Model.DateUpdated.HasValue)
         {
