--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Register/MonitoringInformation.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Register/MonitoringInformation.cshtml
@@ -22,6 +22,6 @@
 
     <div class="form-group">
         <button class="button" id="save-continue-button">Save and continue</button>
-        <p><a href="@Url.RouteUrl(RouteNames.SkipMonitoringInformation)" id="skip-link" class=".sfa-button-secondary" title="Skip telling us more">Skip</a></p>
+        <p><a href="@Url.RouteUrl(RouteNames.SkipMonitoringInformation)" id="skip-link" class="button sfa-button-secondary" title="Skip telling us more">Skip</a></p>
     </div>
 }
