--- a/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Report/VacancyExtensionsCsv.cshtml
@@ -50,7 +50,7 @@
                 <button id="btnValidate" type="submit" class="button" name="VacancyExtensionsCsv" value="ValidateVacancyExtensionsCsv">Get CSV Link</button>
                 @if (Model.IsValid)
                 {
-                    <button id="btnReject" type="submit" class=".sfa-button-secondary" name="VacancyExtensionsCsv" value="DownloadVacancyExtensionsCsv">Download CSV</button>
+                    <button id="btnReject" type="submit" class="button sfa-button-secondary" name="VacancyExtensionsCsv" value="DownloadVacancyExtensionsCsv">Download CSV</button>
                 }
             </div>
         </div>
