--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/TrainingDetails.cshtml
@@ -20,7 +20,7 @@
 
     <div class="form-group">
         <button id="createVacancyButton" type="submit" class="button no-autosave" name="TrainingDetails" value="@saveButtonValue">@saveButtonText</button>
-        <button id="createVacancyAndExit" type="submit" class=".sfa-button-secondary no-autosave" name="TrainingDetails" value="TrainingDetailsAndExit">Save and exit</button>
+        <button id="createVacancyAndExit" type="submit" class="button sfa-button-secondary no-autosave" name="TrainingDetails" value="TrainingDetailsAndExit">Save and exit</button>
         @if (Model.ComeFromPreview)
         {
             @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new {@class = "no-autosave" })
