Lots of little fixes

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/DisplayTemplates/MyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/Shared/DisplayTemplates/MyApplications.cshtml
@@ -91,7 +91,7 @@ else
                                         </tr>
                                     }
                                 </tbody>
-                                <tbody class="tbody-expandrows">
+                                <tbody class="tbody-expandrows sfa-hide">
                                     <tr class="no-btm-border">
                                         <td colspan="2"></td>
                                         <td class="no-wrap sfa-align-center">
@@ -140,7 +140,7 @@ else
                                         </tr>
                                                     }
                                 </tbody>
-                                <tbody class="tbody-expandrows">
+                                <tbody class="tbody-expandrows sfa-hide">
                                     <tr class="no-btm-border">
                                         <td colspan="2"></td>
                                         <td class="no-wrap sfa-align-center">
@@ -199,7 +199,7 @@ else
                                         </tr>
                                     }
                                 </tbody>
-                                <tbody class="tbody-expandrows">
+                                <tbody class="tbody-expandrows sfa-hide">
                                     <tr class="no-btm-border">
                                         <td colspan="2"></td>
                                         <td class="no-wrap sfa-align-center">
@@ -314,7 +314,7 @@ else
                                     </tr>
                                 }
                             </tbody>
-                            <tbody class="tbody-expandrows">
+                            <tbody class="tbody-expandrows sfa-hide">
                                 <tr class="no-btm-border">
                                     <td colspan="2"></td>
                                     <td class="no-wrap sfa-align-center">
