--- a/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Candidate/Candidate.cshtml
@@ -89,7 +89,7 @@ else
                                         </tr>
                                     }
                                 </tbody>
-                                <tbody class="tbody-expandrows">
+                                <tbody class="tbody-expandrows sfa-hide">
                                     <tr class="no-btm-border">
                                         <td colspan="2"></td>
                                         <td class="no-wrap sfa-align-center">
@@ -138,7 +138,7 @@ else
                                         </tr>
                                     }
                                 </tbody>
-                                <tbody class="tbody-expandrows">
+                                <tbody class="tbody-expandrows sfa-hide">
                                     <tr class="no-btm-border">
                                         <td colspan="2"></td>
                                         <td class="no-wrap sfa-align-center">
@@ -188,7 +188,7 @@ else
                                         </tr>                                        
                                     }
                                 </tbody>
-                                <tbody class="tbody-expandrows">
+                                <tbody class="tbody-expandrows sfa-hide">
                                     <tr class="no-btm-border">
                                         <td colspan="2"></td>
                                         <td class="no-wrap sfa-align-center">
@@ -300,7 +300,7 @@ else
                                     </tr>
                                 }
                             </tbody>
-                            <tbody class="tbody-expandrows">
+                            <tbody class="tbody-expandrows sfa-hide">
                                 <tr class="no-btm-border">
                                     <td colspan="2"></td>
                                     <td class="no-wrap sfa-align-center">
