--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/DisplayTemplates/EducationViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/DisplayTemplates/EducationViewModel.cshtml
@@ -11,7 +11,7 @@
 
         }
     </h2>
-    <div class="form-group">
+    <div>
         <p class="form-label-bold">Name of most recent school/college</p>
         <span id="@Html.IdFor(m => m.NameOfMostRecentSchoolCollege)" class="form-prepopped">@Html.DisplayTextFor(m => m.NameOfMostRecentSchoolCollege)</span>
     </div>
