--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/EditorTemplates/EducationViewModel.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/EditorTemplates/EducationViewModel.cshtml
@@ -3,9 +3,8 @@
 <fieldset id="applyEducation" class="sfa-xlarge-bottom-margin sfa-section-bordered">
     <legend class="heading-large">Education</legend>
     @Html.FormTextFor(m => m.NameOfMostRecentSchoolCollege, controlHtmlAttributes: new { @class = "school-name" })
-    <fieldset class="form-group inline-fixed">
-        <legend class="form-label-bold">Years attended</legend>
-        @Html.FormTextFor(m => m.FromYear, controlHtmlAttributes: new { @class = "form-control-medium", maxlength = "4", type = "tel", pattern = "[0-9]*" }, labelHtmlAttributes: new { @class = "form-hint" }, containerHtmlAttributes: new { @class = "form-group-compound" })
-        @Html.FormTextFor(m => m.ToYear, controlHtmlAttributes: new { @class = "form-control-medium", maxlength = "4", type = "tel", pattern = "[0-9]*" }, labelHtmlAttributes: new { @class = "form-hint" }, containerHtmlAttributes: new { @class = "form-group-compound" })
-    </fieldset>
+
+    <label class="form-label-bold">Years attended</label>
+    @Html.FormTextFor(m => m.FromYear, controlHtmlAttributes: new { @class = "form-control-medium", maxlength = "4", type = "tel", pattern = "[0-9]*" }, labelHtmlAttributes: new { @class = "form-hint" }, containerHtmlAttributes: new { @class = "form-group-compound" })
+    @Html.FormTextFor(m => m.ToYear, controlHtmlAttributes: new { @class = "form-control-medium", maxlength = "4", type = "tel", pattern = "[0-9]*" }, labelHtmlAttributes: new { @class = "form-hint" }, containerHtmlAttributes: new { @class = "form-group-compound" })
 </fieldset>
