--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/css/styles.css
@@ -14,10 +14,10 @@ SFA navigation
         float: right !important;
         font-size: 16px; } }
     .sfa-navigation-wrapper .sfa-navigation .sfa-navigation-items a {
-      padding: 0 5px 0 0; }
+      margin: 0 5px 0 0; }
       @media (min-width: 769px) {
         .sfa-navigation-wrapper .sfa-navigation .sfa-navigation-items a {
-          padding: 0 0 0 5px; } }
+          margin: 0 0 0 5px; } }
     .sfa-navigation-wrapper .sfa-navigation .sfa-user-navigation {
       margin-bottom: 5px; }
       .sfa-navigation-wrapper .sfa-navigation .sfa-user-navigation span {
@@ -57,6 +57,9 @@ Hide element (window size)
   @media (min-width: 769px) {
     .sfa-hide-desktop {
       display: none; } }
+
+.sfa-hide {
+  display: none; }
 
 /* -------------------------------------------------------------------
 Custom margins
@@ -182,6 +185,9 @@ Misc - TO BE ORGANISED
 
 .sfa-align-right {
   text-align: right; }
+  @media (min-width: 641px) {
+    .sfa-align-right-tablet {
+      text-align: right; } }
 
 .sfa-align-center {
   text-align: center; }
