Edit html structure of FAA and FT index page headers

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Index.cshtml
@@ -5,11 +5,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="hgroup">
-    <h1 class="heading-xlarge">
-        Find an apprenticeship
-        <span class="heading-secondary">Search and apply for an apprenticeship in England</span>
-    </h1>
+<div class="grid-row">
+    <div class="column-two-thirds">
+        <h1 class="heading-xlarge">
+            Find an apprenticeship
+            <span class="heading-secondary">Search and apply for an apprenticeship in England</span>
+        </h1>
+    </div>
 </div>  
 <div class="grid-row" id="searchHome">
     <section class="column-two-thirds">
