--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/ValidationSummary.cshtml
@@ -41,7 +41,7 @@ var hasWarnings = Model.HasWarnings();
 
 </div>
 
-<div id="error-summary" class="error-summary @(!hasWarnings ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
+<div id="warning-summary" class="warning-summary @(!hasWarnings ? "sfa-hide" : "")" role="group" aria-labelledby="error-summary-heading-example-1" tabindex="-1">
 
     <h1 class="heading-medium error-summary-heading" id="error-summary-heading-example-1">
         Please fix these errors
