Edit dd list styles

--- a/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
+++ b/src/SFA.Apprenticeships.Web.Common/Content/scss/_sfa-custom-layouts.scss
@@ -265,8 +265,8 @@ Custom Typography
 Custom list
 ------------------------------------------------------------------- */
 
-//detail list
-.sfa-dl{
+// Detail list
+dl.sfa-dl{
     .sfa-di { //detail list item
         margin-bottom: 5px;
     }
