--- a/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
+++ b/src/SFA.Apprenticeships.Web.Candidate/Content/_assets/css/styles.css
@@ -373,7 +373,7 @@ iframe, object, embed {
     -webkit-box-shadow: 0 2px 0 #ffbf47;
     -moz-box-shadow: 0 2px 0 #ffbf47;
     box-shadow: 0 2px 0 #ffbf47; }
-  .button.sfa-button-secondary:visited {
+  .button.sfa-button-secondary:visited, .button.sfa-button-secondary:link {
     background: transparent;
     color: #005ea5; }
   .button.sfa-button-secondary:hover {
@@ -383,12 +383,15 @@ iframe, object, embed {
     top: 0;
     color: #2b8cc4;
     background: #ffbf47; }
-  .button.sfa-button-secondary[disabled="disabled"] {
+  .button.sfa-button-secondary.disabled, .button.sfa-button-secondary[disabled="disabled"], .button.sfa-button-secondary[disabled] {
     background: transparent; }
-    .button.sfa-button-secondary[disabled="disabled"]:focus {
+    .button.sfa-button-secondary.disabled:focus, .button.sfa-button-secondary[disabled="disabled"]:focus, .button.sfa-button-secondary[disabled]:focus {
       outline: none; }
-    .button.sfa-button-secondary[disabled="disabled"]:hover {
-      color: #005ea5; }
+    .button.sfa-button-secondary.disabled:hover, .button.sfa-button-secondary.disabled:link, .button.sfa-button-secondary.disabled:visited, .button.sfa-button-secondary.disabled:active, .button.sfa-button-secondary[disabled="disabled"]:hover, .button.sfa-button-secondary[disabled="disabled"]:link, .button.sfa-button-secondary[disabled="disabled"]:visited, .button.sfa-button-secondary[disabled="disabled"]:active, .button.sfa-button-secondary[disabled]:hover, .button.sfa-button-secondary[disabled]:link, .button.sfa-button-secondary[disabled]:visited, .button.sfa-button-secondary[disabled]:active {
+      background: transparent;
+      color: #005ea5;
+      text-decoration: underline;
+      box-shadow: none; }
 
 .sfa-hide-button {
   background: transparent !important;
@@ -2570,6 +2573,7 @@ textarea {
   line-height: 1.25;
   width: 100%;
   padding: 5px 4px 4px;
+  color: inherit;
   background-color: transparent;
   border: 2px solid; }
   @media (min-width: 641px) {
@@ -2642,7 +2646,9 @@ textarea.form-control {
   position: relative;
   padding: 8px 10px 9px 50px;
   margin-bottom: 10px;
-  cursor: pointer; }
+  cursor: pointer;
+  -ms-touch-action: manipulation;
+  touch-action: manipulation; }
   @media (min-width: 641px) {
     .block-label {
       float: left;
@@ -2845,13 +2851,13 @@ input[type=number] {
   .breadcrumbs a {
     color: #0b0c0c; }
 
-.phase-banner-alpha {
+.phase-banner {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3; }
   @media (min-width: 641px) {
-    .phase-banner-alpha {
+    .phase-banner {
       padding-bottom: 10px; } }
-  .phase-banner-alpha p {
+  .phase-banner p {
     display: table;
     margin: 0;
     color: #000;
@@ -2861,10 +2867,10 @@ input[type=number] {
     font-size: 14px;
     line-height: 1.14286; }
     @media (min-width: 641px) {
-      .phase-banner-alpha p {
+      .phase-banner p {
         font-size: 16px;
         line-height: 1.25; } }
-  .phase-banner-alpha .phase-tag {
+  .phase-banner .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
     margin: 0 8px 0 0;
@@ -2878,21 +2884,24 @@ input[type=number] {
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #d53880; }
+    background-color: #005ea5; }
     @media (min-width: 641px) {
-      .phase-banner-alpha .phase-tag {
+      .phase-banner .phase-tag {
         font-size: 16px;
         line-height: 1.25; } }
-  .phase-banner-alpha span {
+  .phase-banner span {
     display: table-cell;
     vertical-align: baseline; }
 
+.phase-banner-alpha,
 .phase-banner-beta {
   padding: 10px 0 8px;
   border-bottom: 1px solid #bfc1c3; }
   @media (min-width: 641px) {
+    .phase-banner-alpha,
     .phase-banner-beta {
       padding-bottom: 10px; } }
+  .phase-banner-alpha p,
   .phase-banner-beta p {
     display: table;
     margin: 0;
@@ -2903,9 +2912,11 @@ input[type=number] {
     font-size: 14px;
     line-height: 1.14286; }
     @media (min-width: 641px) {
+      .phase-banner-alpha p,
       .phase-banner-beta p {
         font-size: 16px;
         line-height: 1.25; } }
+  .phase-banner-alpha .phase-tag,
   .phase-banner-beta .phase-tag {
     display: -moz-inline-stack;
     display: inline-block;
@@ -2920,11 +2931,13 @@ input[type=number] {
     letter-spacing: 1px;
     text-decoration: none;
     color: #fff;
-    background-color: #f47738; }
+    background-color: #005ea5; }
     @media (min-width: 641px) {
+      .phase-banner-alpha .phase-tag,
       .phase-banner-beta .phase-tag {
         font-size: 16px;
         line-height: 1.25; } }
+  .phase-banner-alpha span,
   .phase-banner-beta span {
     display: table-cell;
     vertical-align: baseline; }
