RA-388: Adding edit wage page

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyManagement/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.DeleteVacancyViewModel
+﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.VacancyManagement.DeleteVacancyViewModel
 @using System.Web.Mvc.Html
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.ProviderUser
 @using SFA.Apprenticeships.Web.Recruit.Constants
